[package]
name = "simple_ws_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
chrono = "0.4"
serde = {version = "1.0.133", features = ["derive"] }
serde_json = "1.0"